--- a/src/Components/TopNav/TopNav.scss
+++ b/src/Components/TopNav/TopNav.scss
@@ -58,6 +58,7 @@
         cursor: pointer;
         display: flex;
         align-items: center;
+        justify-content: center;
       }
 
       .search-icon {
