--- a/src/Components/UserSearchPage/UserSearchPage.scss
+++ b/src/Components/UserSearchPage/UserSearchPage.scss
@@ -4,6 +4,10 @@
   width: 75%;
   margin: 24px auto;
 
+  .searched-user-label {
+    font-size: 16pt;
+  }
+
   .user-search-item-wrap {
     display: flex;
     flex-direction: row;
