--- a/src/Components/UserSearchPage/UserSearchPage.css
+++ b/src/Components/UserSearchPage/UserSearchPage.css
@@ -14,6 +14,7 @@
   margin-bottom: 12px;
 }
 .user-search-content-wrap .user-search-item-wrap .user-search-item {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -43,18 +44,38 @@
   justify-content: space-between;
   align-items: center;
 }
-.user-search-content-wrap .user-search-item-wrap .search-user-item-buttons button {
+.user-search-content-wrap .user-search-item-wrap .search-user-item-buttons .search-user-item-buttons-button {
   background-color: #f3e156;
   border-radius: 10px;
   border: none;
   cursor: pointer;
   margin-left: 12px;
+  font-size: 12pt;
+  padding: 2px;
 }
-.user-search-content-wrap .user-search-item-wrap .search-user-item-buttons button .icon {
+.user-search-content-wrap .user-search-item-wrap .search-user-item-buttons .search-user-item-buttons-button .icon {
   color: white;
   width: 30px;
   height: 30px;
   padding: 8px;
+}
+
+.user-blocked-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(63, 57, 75, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+.user-blocked-cover .icon {
+  z-index: 10;
+  color: #ef5f5f;
+  height: 50%;
 }
 
 /*# sourceMappingURL=UserSearchPage.css.map */
