--- a/src/Components/UserSearchPage/UserSearchPage.scss
+++ b/src/Components/UserSearchPage/UserSearchPage.scss
@@ -17,6 +17,7 @@
     margin-bottom: 12px;
 
     .user-search-item {
+      position: relative;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -48,12 +49,14 @@
       justify-content: space-between;
       align-items: center;
 
-      button {
+      .search-user-item-buttons-button {
         background-color: $color-yellow;
         border-radius: 10px;
         border: none;
         cursor: pointer;
         margin-left: 12px;
+        font-size: 12pt;
+        padding: 2px;
 
         .icon {
           color: white;
@@ -63,5 +66,24 @@
         }
       }
     }
+  }
+}
+
+.user-blocked-cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba($color-ui, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+
+  .icon {
+    z-index: 10;
+    color: $color-error;
+    height: 50%;
   }
 }
