--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,4 +8,22 @@ body {
   margin: auto;
 }
 
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.pagination .page-button {
+  background-color: #f3e156;
+  border: none;
+  border-radius: 5px;
+  font-size: 13pt;
+  text-decoration: none;
+  padding: 2px 8px;
+  margin: 0 3px;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=Home.css.map */
