--- a/src/Components/TopNav/TopNav.css
+++ b/src/Components/TopNav/TopNav.css
@@ -22,7 +22,7 @@
   text-decoration: none;
   font-size: 18px;
   padding: 12px 12px 12px 16px;
-  color: #3f394b;
+  color: white;
 }
 .topnav .left-wrap .input-container {
   position: relative;
