--- a/src/Components/TopNav/TopNav.scss
+++ b/src/Components/TopNav/TopNav.scss
@@ -24,7 +24,7 @@
       text-decoration: none;
       font-size: 18px;
       padding: 12px 12px 12px 16px;
-      color: $color-ui;
+      color: white;
     }
 
     .input-container {
