--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -89,8 +89,10 @@
         padding: 6px 14px;
         font-size: 12pt;
         color: white;
-        height: 96px;
         overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        display: -webkit-box;
       }
     }
   }
