--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -13,7 +13,7 @@ body {
 }
 .main-wrap .form-wrap { /* css is loaded from the signup form */ }
 .main-wrap .form-wrap h2 {
-  background-color: #6540b0;
+  background-color: #5f4396;
   color: white;
   padding: 12px;
   width: 100%;
