--- a/src/Components/SignupForm/SignupForm.css
+++ b/src/Components/SignupForm/SignupForm.css
@@ -21,7 +21,7 @@ body {
   align-items: center;
 }
 .main-wrap .form-wrap h2 {
-  background-color: #6540b0;
+  background-color: #5f4396;
   color: white;
   padding: 12px;
   width: 100%;
