--- a/src/Components/UserSearchPage/UserSearchPage.css
+++ b/src/Components/UserSearchPage/UserSearchPage.css
@@ -33,7 +33,7 @@
   margin-right: 18px;
 }
 .user-search-content-wrap .user-search-item-wrap .user-search-item .search-user-info-wrap .search-user-info-label {
-  background-color: #6540b0;
+  background-color: #5f4396;
   width: 100%;
   padding: 4px 12px;
   border-radius: 10px;
