--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,6 +1,6 @@
 $color-background: #25212d;
 $color-yellow: #f3e156;
-$color-purple: #6540b0;
+$color-purple: #5f4396;
 $color-ui: #3f394b;
 $color-error: #ef5f5f;
-$color-green: #69ee70
+$color-green: #69ee70;
