--- a/src/Components/Schedule/Schedule.css
+++ b/src/Components/Schedule/Schedule.css
@@ -16,7 +16,7 @@ body {
   margin-top: 24px;
 }
 .schedule-content-wrap .con-name {
-  background-color: #6540b0;
+  background-color: #5f4396;
   color: white;
   padding: 6px 28px 6px 16px;
   border-radius: 10px;
@@ -38,7 +38,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #6540b0;
+  background-color: #5f4396;
   border-radius: 10px;
   padding: 12px;
 }
